tests/baselines/reference/indexWithoutParamType.errors.txt
==== tests/cases/compiler/indexWithoutParamType.ts (1 errors) ====
    var y: { []; } // Error
              ~
!!! indexWithoutParamType.ts(1,11): error TS1003: Identifier expected.